--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -7,8 +7,10 @@
 
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
-          <table class="display table table-striped table-hover dateRangeFilterTable dataTable invoice-table ">
+          <table class="display table table-striped table-hover dataTable invoice-table ">
             <thead>
               <tr>
                 <th>Awb Number</th>
