--- a/views/pages/warehouse/manifest/incoming.ejs
+++ b/views/pages/warehouse/manifest/incoming.ejs
@@ -7,8 +7,10 @@
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Create Manifest</a>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dateRangeFilterTable dataTable manifest-table">
+        <table class="display table table-striped table-hover dataTable manifest-table">
           <thead>
             <tr>
               <th>Manifest ID#</th>
