--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -58,6 +58,7 @@
                     <th>AWB Number</th>
                     <th>Consignee</th>
                     <th>Shipper</th>
+                    <th>Driver</th>
                     <th>Carrier</th>
                     <th>Pieces</th>
                     <th>Weight</th>
