--- a/views/pages/fleet/vehicle/list.ejs
+++ b/views/pages/fleet/vehicle/list.ejs
@@ -9,8 +9,10 @@
         </div>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dateRangeFilterTable dataTable vehicle-table">
+        <table class="display table table-striped table-hover dataTable vehicle-table">
           <thead>
             <tr>
               <th>Make</th>
