--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -23,8 +23,10 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
+          <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
           <table id="pricelabel-table"
-            class="display table table-striped table-hover dataTable dateRangeFilterTable pricelabel-table">
+            class="display table table-striped table-hover dataTable pricelabel-table">
             <thead>
               <tr>
                 <th></th>
