--- a/views/pages/warehouse/shipper/list.ejs
+++ b/views/pages/warehouse/shipper/list.ejs
@@ -8,7 +8,9 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="shipperTable" class="display dataTable dateRangeFilterTable table table-striped table-hover">
+          <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+          <table id="shipperTable" class="display dataTable table table-striped table-hover">
             <thead>
               <tr>
                 <!-- <th>ID</th> -->
