--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -62,7 +62,9 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive p-4">
-        <table id = "package-table" class="display dateRangeFilterTable table table-striped table-hover dataTable package-table">
+          <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+        <table id = "package-table" class="display table table-striped table-hover dataTable package-table">
           <thead>
             <tr>
               <th><input id="checkall" type="checkbox" class="package-select-all" /></th>
