--- a/views/pages/warehouse/container/list.ejs
+++ b/views/pages/warehouse/container/list.ejs
@@ -9,8 +9,10 @@
         <a href="create" class="btn btn-primary btn-round float-right ml-md-auto">Add Container</a>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
-          <table id="containerTable" class="display table dataTable table-striped  dateRangeFilterTable table-hover">
+          <table id="containerTable" class="display table dataTable table-striped table-hover">
             <thead>
               <tr>
                 <th>Name</th>
