--- a/views/pages/warehouse/hazmat/list.ejs
+++ b/views/pages/warehouse/hazmat/list.ejs
@@ -9,7 +9,9 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-          <table id="hazmatTable" class="display table dateRangeFilterTable table-striped table-hover">
+            <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+            <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+          <table id="hazmatTable" class="display table  table-striped table-hover">
             <thead>
               <tr>
                 <th>ID</th>
@@ -20,20 +22,7 @@
               </tr>
             </thead>
             <tbody>
-              <% hazmats.forEach(function(hazmat){ %>
-              <tr data-record="<%= hazmat.id %>">
-                <td><%=hazmat.id%></td>
-                <td><%=helpers.formatDate(hazmat.createdAt)%></td>
-                <td><strong><%=hazmat.name%></strong></td>
-                <td><%=hazmat.description%></td>
-                <td>
-                  <a href='#' data-id='<%=hazmat.id%>' data-target="#edit-hazmat" data-toggle='modal'
-                    class='btn-edit-hazmat mx-3'><i class="fas fa-pen"></i></a>
-                  <!-- temporary commenting the code -->
-                  <!-- <a href='#' class='rm-hazmat ml-3' data-id='<%=hazmat.id%>'><i class="fas fa-trash"></i></a> -->
-                </td>
-              </tr>
-              <%})%>
+        
             </tbody>
           </table>
         </div>
