--- a/views/pages/warehouse/manifest/list.ejs
+++ b/views/pages/warehouse/manifest/list.ejs
@@ -10,7 +10,7 @@
         <div class="table-responsive">
             <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
             <input type="hidden" name="clear" id="clear" value="<%=clear%>">
-        <table class="display table table-striped table-hover  dataTable manifest-table">
+        <table class="display table table-striped table-hover  dataTable manifest-table-fll">
           <thead>
             <tr>
               <th>Manifest ID#</th>
