--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -20,8 +20,8 @@
       <div class="card-body daterangepickerbody">
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-invoice" role="tabpanel" aria-labelledby="awb-invoice-tab">
-            <div class="table-responsive">
-              <table class="display table table-striped table-hover dateRangeFilterTable dataTable invoice-table ">
+            <div class="table-responsive"  style="width: 100%">
+              <table  style="width: 100%" class="display table table-striped table-hover dataTable invoice-table ">
                 <thead>
                   <tr>
                     <th>Awb Number</th>
@@ -32,31 +32,14 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <% invoices.forEach(invoice => { %>
-                  <tr data-record="<%=invoice._id%>">
-                    <td><a class="text-decoration-none"
-                        href="/warehouse/nas/awb/manage/<%=invoice.awbId ? invoice.awbId._id: '#'%>/preview">
-                        <%= (invoice.awbId) ?invoice.awbId.awbId : '' %> </a></td>
-                    <td><%= helpers.formatDate(invoice.createdAt)%></td>
-                    <td><a href="JavaScript:Void(0);"
-                        onclick="downloadInvoice('<%=(invoice.fileName) ? invoice.fileName :invoice.filename%>')">Invoice
-                    </td>
-                    <td>
-                      <button class="btn btn-primary btn-view-invoice-package btn-round float-right ml-md-auto" data-toggle="modal"
-                        data-original-title="View Packages" data-id="<%=invoice._id%>" data-target="#invoice-packages">View</button>
-                    </td>
-                    <td><a href="JavaScript:Void(0);"
-                        onclick="deleteInvoice('<%=(invoice.fileName) ? invoice.fileName : invoice.filename%>','<%=invoice._id%>')"><i
-                          class="fa fa-trash"></i></td>
-                  </tr>
-                  <% }) %>
+              
                 </tbody>
               </table>
             </div>
           </div>
           <div class="tab-pane fade" id="no-awb-invoice" role="tabpanel" aria-labelledby="no-awb-tab">
               <div class="table-responsive">
-                  <table class="display table table-striped table-hover dateRangeFilterTable dataTable no-awb-invoice-table ">
+                  <table class="display table table-striped table-hover dataTable no-awb-invoice-table ">
                     <thead>
                       <tr>
                         <th>Date Uploaded</th>
@@ -67,25 +50,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <% additionalInvoices.forEach(invoice => { %>
-                      <tr data-record="<%=invoice._id%>">
-                        
-                        <td><%= helpers.formatDate(invoice.createdAt)%></td>
-                        <td><a href="JavaScript:Void(0);"
-                            onclick="downloadInvoice('<%=(invoice.fileName) ? invoice.fileName :invoice.filename%>')">Invoice
-                        </td>
-                        <td>
-                            <%= invoice.courierNo %>
-                         </td>
-                        <td>
-                            <%= helpers.getFullName(invoice.customerId)  %>
-                        </td>
-                        <td><a href="JavaScript:Void(0);"
-                            onclick="deleteInvoice('<%=(invoice.fileName) ? invoice.fileName : invoice.filename%>','<%=invoice._id%>')"><i
-                              class="fa fa-trash"></i></td>
-    
-                      </tr>
-                      <% }) %>
+                    
                     </tbody>
                   </table>
               </div>
