--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -20,8 +20,8 @@
       <div class="card-body daterangepickerbody">
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-invoice" role="tabpanel" aria-labelledby="awb-invoice-tab">
-            <div class="table-responsive"  style="width: 100%">
-              <table  style="width: 100%" class="display table table-striped table-hover dataTable invoice-table ">
+            <div class="table-responsive" >
+              <table  class="display table table-striped table-hover dataTable invoice-table ">
                 <thead>
                   <tr>
                     <th>Awb Number</th>
@@ -39,7 +39,7 @@
           </div>
           <div class="tab-pane fade" id="no-awb-invoice" role="tabpanel" aria-labelledby="no-awb-tab">
               <div class="table-responsive">
-                  <table class="display table table-striped table-hover dataTable no-awb-invoice-table ">
+                  <table style="width: 100%" class="display table table-striped table-hover dataTable no-awb-invoice-table ">
                     <thead>
                       <tr>
                         <th>Date Uploaded</th>
