--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -51,7 +51,7 @@
                     <td><%=awb.driver ? awb.driver.firstName +' ' + awb.driver.lastName:''%></td>
                     <td><%=awb.carrier.name %></td>
                     <td><%=awb.packages.length %></td>
-                    <td><%=awb.weight %> lbs</td>
+                    <td><%=(awb.weight).toFixed(2) %> lbs</td>
                     <td><%=(awb.volumetricWeight).toFixed(2) %> lbs</td>
                     <!-- <td><% if(awb.invoice) { %>
                       <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
