awb datewise server side

--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -18,6 +18,7 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="tab-content m-4" id="awb-list-tabContent">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
           <div class="tab-pane fade show active" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
             <div class="table-responsive">
               <table id='awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
