invoice and package original scan date changes

--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -27,6 +27,7 @@
                     <th>Awb Number</th>
                     <th>Date Uploaded</th>
                     <th>Invoice</th>
+                    <th>Tracking #</th>
                     <th>View</th>
                     <th></th>
                   </tr>
@@ -41,6 +42,7 @@
                     <td><a href="JavaScript:Void(0);"
                         onclick="downloadInvoice('<%=(invoice.fileName) ? invoice.fileName :invoice.filename%>')">Invoice
                     </td>
+                    <td><%= (invoice.courierNo) ? invoice.courierNo : '-' %></td>
                     <td>
                       <button class="btn btn-primary btn-view-invoice-package btn-round float-right ml-md-auto" data-toggle="modal"
                         data-original-title="View Packages" data-id="<%=invoice._id%>" data-target="#invoice-packages">View</button>
