--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -7,6 +7,7 @@
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Consignee</a>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
           <table id="customerTable" class="display table dataTable dateRangeFilterTable table-striped table-hover">
             <thead>
