--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -7,6 +7,7 @@
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
         <table class="display table table-striped dateRangeFilterTable table-hover dataTable user-table">
           <thead>
