--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -18,6 +18,7 @@
 
       </div> -->
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-invoice" role="tabpanel" aria-labelledby="awb-invoice-tab">
             <div class="table-responsive">
